Fixed Landing page IntroCard Alignment and finished polishing it

--- a/frontend/src/features/signup/pages/SignUpPage.css
+++ b/frontend/src/features/signup/pages/SignUpPage.css
@@ -152,6 +152,7 @@ font-size: 13px;
   height: 50px;
   border-radius: 10px;
   background-color: #8a5a8e;
+  transition: background 0.3s ease;
 }
 
 .signin-button:hover {
